--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,9 @@ cloudinary = "*"
 markdown = "*"
 django-filter = "*"
 django-cors-headers = "*"
-
+django-heroku = "*"
+gunicorn = "*"
+whitenoise = "*"
 
 [dev-packages]
 
